corrected alignment for logo

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -5,5 +5,6 @@
     left:0;
     width: 100%;
     border-bottom: 1rem solid #fafafa;
+    z-index: 10;
 }
 
